--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,28 @@
 *{
     margin: 0;
     border: 0;
+    box-sizing: border-box;
+}
+
+body{
+    background-color: #f6f8f9;
+}
+
+.home{
+    background-color: white;
+    height: 100px;
+    
+}
+
+#logo{
+    height: 80px;
+    margin: 10px;
+    vertical-align: middle;
+}
+
+#tobo{
+    font-size: 50px;
+    font-weight: bold;
+    font-family: 'Roboto', sans-serif;
+    vertical-align: middle;
 }
