--- a/css/style.css
+++ b/css/style.css
@@ -8,15 +8,16 @@ body{
     background-color: #f6f8f9;
 }
 
+/* Header */
 .home{
     background-color: white;
     height: 100px;
-    
 }
 
 #logo{
     height: 80px;
     margin: 10px;
+    padding-left: 10px;
     vertical-align: middle;
 }
 
@@ -26,3 +27,47 @@ body{
     font-family: 'Roboto', sans-serif;
     vertical-align: middle;
 }
+/* /Header */
+
+/* Main */
+
+.contenitore{
+    height: 750px;
+    width: 65%;
+    margin: auto;
+    margin-top: 50px;
+    background-color:red;
+    border-radius: 10px;
+}
+
+nav{
+    border-bottom: 3px solid #f6f8f9;
+}
+
+section{
+    margin-left: 2%;
+}
+
+button{
+    margin-top: 2%;
+    margin-bottom: 2%;
+    margin-left: 1%;
+    border-radius: 5px;
+    height: 35px;
+    font-weight: bold;
+    border: 1px solid grey;
+}
+
+#add_task{
+    background-color: #47adf1;
+    color: white;
+    width: 8%;
+}
+
+#add_section{
+    background-color: white;
+    color: grey;
+    width: 9%;
+}
+
+/* /Main */
