--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     border: 0;
     box-sizing: border-box;
+    font-family: 'Arial', sans-serif;
 }
 
 body{
@@ -24,7 +25,7 @@ body{
 #tobo{
     font-size: 50px;
     font-weight: bold;
-    font-family: 'Roboto', sans-serif;
+   
     vertical-align: middle;
 }
 /* /Header */
@@ -36,7 +37,7 @@ body{
     width: 65%;
     margin: auto;
     margin-top: 50px;
-    background-color:red;
+    background-color:white;
     border-radius: 10px;
 }
 
@@ -74,7 +75,7 @@ button{
 
 ul{
     list-style-type: none;
-    font-size: 38px;
+    font-size: 36px;
 }
 
 .lista{
@@ -82,11 +83,35 @@ ul{
 }
 
 .tag{
-    font-size: 20px;
-    border-radius: 15px;
+    font-size: 15px;
+    border-radius: 10px;
+    width: 50px;
+    color: white;
+
+    padding: 7px;
 }
 
 .lightblue{
-    background-color: rgb(128, 128, 199);
+    background-color: #47adf1;
+}
+
+.purple{
+    background-color: #9c72e4;
+}
+
+.green{
+    background-color: #64c0a9;
+}
+
+.orange{
+    background-color: #f29e33;
+}
+
+.pink {
+    background-color: #d863a1;
+}
+
+.lightgreen {
+    background-color: #b0c926;
 }
 /* /Main */
