--- a/css/style.css
+++ b/css/style.css
@@ -85,16 +85,15 @@ ul{
 
 /* Icone check e cross */
 .circle{
+    display: inline-block;
     margin-left: -3%;
     margin-right: 0.5%;
+    font-size: 14px;
     border: 1px solid;
     border-radius: 50%;
-    font-size: 14px;
-    display: inline-block;
     height: 20px;
     width: 20px;
     text-align: center;
-    vertical-align: center;
 }
 
 .check{
@@ -102,7 +101,7 @@ ul{
 }
 
 .cross{
-    color: red;
+    color: red
 }
 
 .elementi{
